sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:5: error: ')' expected but ',' found.
    while (plusPetit i:Int,i+1:Int==false){
                          ^AlgBubbleSort1:10: error: illegal start of simple expression
  }
  ^